@@ -1,3 +1,13 @@
+2006-12-22  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_context.c,
+	  packages/cairo/ext/rb_cairo_surface.c,
+	  packages/cairo/ext/rb_cairo_pattern.c,
+	  packages/cairo/ext/rb_cairo_exception.c,
+	  packages/cairo/ext/rb_cairo_constants.c,
+	  packages/cairo/ext/rb_cairo_pattern.c,
+	  packages/cairo/ext/rb_cairo_private.h: supported cairo 1.3.8.
+
 2006-12-19  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_pattern.c:
